--- a/application/view/tmpl/menu.phtml
+++ b/application/view/tmpl/menu.phtml
@@ -23,17 +23,18 @@ $menu = $this->getMenu();
         if (count($menu)) {
             $menuControl = $this->getSubject()->getObject(aam_Control_Object_Menu::UID);
             foreach ($menu as $i => $menu) {
+                $menu_id = $i . uniqid();
                 ?>
                 <div class="group">
                     <h4><?php echo $menu['name']; ?></h4>
                     <div>
                         <div class="whole-menu">
-                            <label for="m<?php echo $i; ?>"><?php echo __('Restrict All', 'aam'); ?></label>
-                            <input type="checkbox" id="m<?php echo $i; ?>" name="aam[<?php echo aam_Control_Object_Menu::UID; ?>][<?php echo $menu['id']; ?>]" <?php echo ($menuControl->has($menu['id']) ? 'checked="checked"' : ''); ?> class="whole_menu" />
-                            <label for="m<?php echo $i; ?>"><span></span></label>
+                            <label for="m<?php echo $menu_id; ?>"><?php echo __('Restrict All', 'aam'); ?></label>
+                            <input type="checkbox" id="m<?php echo $menu_id; ?>" name="aam[<?php echo aam_Control_Object_Menu::UID; ?>][<?php echo $menu['id']; ?>]" <?php echo ($menuControl->has($menu['id']) ? 'checked="checked"' : ''); ?> class="whole_menu" />
+                            <label for="m<?php echo $menu_id; ?>"><span></span></label>
                         </div>
                         <?php if (isset($menu['submenu'])) { ?>
-                            <div class="menu-submenu-list" id="submenu_m<?php echo $i; ?>">
+                            <div class="menu-submenu-list" id="submenu_m<?php echo $menu_id; ?>">
                                 <?php
                                 $c = 1;
                                 foreach ($menu['submenu'] as $j => $submenu) {
@@ -42,9 +43,9 @@ $menu = $this->getMenu();
                                     }
                                     ?>
                                     <div class="menu-submenu-item">
-                                        <label for="m<?php echo $i . $j; ?>"><?php echo $submenu['name']; ?></label>
-                                        <input type="checkbox" id="m<?php echo $i . $j; ?>" name="aam[<?php echo aam_Control_Object_Menu::UID; ?>][<?php echo $submenu['id']; ?>]" <?php echo ($menuControl->has($submenu['id']) ? 'checked="checked"' : ''); ?> />
-                                        <label for="m<?php echo $i . $j; ?>"><span></span></label>
+                                        <label for="m<?php echo $menu_id . $j; ?>" tooltip="<?php echo $submenu['name']; ?>" ><?php echo $submenu['short']; ?></label>
+                                        <input type="checkbox" id="m<?php echo $menu_id . $j; ?>" name="aam[<?php echo aam_Control_Object_Menu::UID; ?>][<?php echo $submenu['id']; ?>]" <?php echo ($menuControl->has($submenu['id']) ? 'checked="checked"' : ''); ?> />
+                                        <label for="m<?php echo $menu_id . $j; ?>"><span></span></label>
                                     </div>
                                     <?php
                                     if ($c > 3) {
