--- a/media/css/aam.css
+++ b/media/css/aam.css
@@ -721,6 +721,7 @@
     display: inline-block;
     line-height: 25px;
     height: 29px;
+    font-size: 0.8em;
 }
 
 #main_menu_list input[type="checkbox"] {
