Bug fixing. Release Beta 3 (last beta)
git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@833569 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/application/view/tmpl/menu.phtml
+++ b/application/view/tmpl/menu.phtml
@@ -66,7 +66,7 @@ $menu = $this->getMenu();
         } else {
             ?>
             <div class="menu-empty-list">
-                <span><?php echo __('There is no signe menu item allowed for current Role or User', 'aam'); ?></span>
+                <span><?php echo __('There is no single menu item allowed for current Role or User', 'aam'); ?></span>
             </div>
             <?php
         }
