--- a/application/view/tmpl/menu.phtml
+++ b/application/view/tmpl/menu.phtml
@@ -29,7 +29,7 @@ $menu = $this->getMenu();
                     <h4><?php echo $menu['name']; ?></h4>
                     <div>
                         <div class="whole-menu">
-                            <label for="m<?php echo $menu_id; ?>"><?php echo __('Restrict All', 'aam'); ?></label>
+                            <label for="m<?php echo $menu_id; ?>"><?php echo __('Hide All', 'aam'); ?></label>
                             <input type="checkbox" id="m<?php echo $menu_id; ?>" name="aam[<?php echo aam_Control_Object_Menu::UID; ?>][<?php echo $menu['id']; ?>]" <?php echo ($this->hasRestrictedAll($menu) ? 'checked="checked"' : ''); ?> class="whole_menu" />
                             <label for="m<?php echo $menu_id; ?>"><span></span></label>
                         </div>
