--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -36,11 +36,11 @@
                                     <td class="extension-price payed">$30.00</td>
                                     <td>
                                         <div class="extension-actions">
-                                            <a href="http://wpaam.com/support#viewtopic.php?f=7&t=10" target="_blank" class="extension-action extension-action-forum" tooltip="Visit Our Forum"></a>
+                                            <a href="http://wpaam.com/support#viewtopic.php?f=7&t=10" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Forum"></a>
                                             <?php if ($this->hasExtension('AAM Plus Package')) { ?>
-                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Plus Package" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Plus Package" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
@@ -74,9 +74,9 @@
                     </h3>
                     <div class="inside">
                         <div id="misc-publishing-actions" class="cpanel">
-                            <a href="https://twitter.com/wpaam" class="cpanel-item cpanel-item-twitter" tooltip="Follow @wpaam" target="_blank">Follow</a>
-                            <a href="mailto:support@wpaam.com" class="cpanel-item cpanel-item-message" tooltip="Send Us Email">Send Message</a>
-                            <a href="http://wpaam.com" class="cpanel-item cpanel-item-website" tooltip="Visit Us" target="_blank">Website</a>
+                            <a href="https://twitter.com/wpaam" class="cpanel-item cpanel-item-twitter" aam-tooltip="Follow @wpaam" target="_blank">Follow</a>
+                            <a href="mailto:support@wpaam.com" class="cpanel-item cpanel-item-message" aam-tooltip="Send Us Email">Send Message</a>
+                            <a href="http://wpaam.com" class="cpanel-item cpanel-item-website" aam-tooltip="Visit Us" target="_blank">Website</a>
                         </div>
                     </div>
                 </div>
