--- a/application/view/tmpl/metabox.phtml
+++ b/application/view/tmpl/metabox.phtml
@@ -11,8 +11,8 @@
         <div class="metabox-top-action-link">
             <input type="text" class="link-text" id="metabox_link" />
         </div>
-        <a href="#" class="metabox-top-action metabox-top-action-add" tooltip="<?php echo __('Retrieve Metaboxes From Link', 'aam') ;?>"></a>
-        <a href="#" class="metabox-top-action metabox-top-action-refresh" tooltip="<?php echo __('Refresh the List', 'aam') ;?>"></a>
+        <a href="#" class="metabox-top-action metabox-top-action-add" aam-tooltip="<?php echo __('Retrieve Metaboxes From Link', 'aam') ;?>"></a>
+        <a href="#" class="metabox-top-action metabox-top-action-refresh" aam-tooltip="<?php echo __('Refresh the List', 'aam') ;?>"></a>
         <br class="clear" />
     </div>
     <div class="aam-metabox-loader"></div>
