--- a/application/view/tmpl/manager.phtml
+++ b/application/view/tmpl/manager.phtml
@@ -29,6 +29,26 @@
             </div>
         </div>
 
+        <?php if ($this->checkWarnings()) { ?>
+            <div class="postbox-container" style="width:25%; margin-left: 2%;">
+                <div class="metabox-holder">
+                    <div class="meta-box-sortables">
+                        <div class="postbox">
+                            <div class="handlediv" title="<?php echo __('Click to toggle', 'aam'); ?>"></div>
+                            <h3 class="hndle">
+                                <span><?php echo __('AAM Warnings', 'aam'); ?></span>
+                            </h3>
+                            <div class="inside">
+                                <?php foreach ($this->getWarnings() as $warning) { ?>
+                                    <div class="aam-warning"><span><?php echo $warning; ?></span></div>
+                                <?php } ?>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <?php } ?>
+
         <div class="postbox-container" style="width:25%; margin-left: 2%;">
             <div class="metabox-holder" id="control_panel">
                 <div class="meta-box-sortables">
@@ -38,11 +58,9 @@
                             <span><?php echo __('Control Panel', 'aam'); ?></span>
                         </h3>
                         <div class="inside">
-                            <div>
-                                <div class="cpanel-major">
-                                    <a href="#" class="cpanel-item cpanel-item-restore" id="aam_roleback" aam-tooltip="<?php echo __('Undo Change', 'aam'); ?>"><?php echo __('Undo Change', 'aam'); ?></a>
-                                    <a href="#" class="cpanel-item cpanel-item-save" id="aam_save" ><?php echo __('Save', 'aam'); ?></a>
-                                </div>
+                            <div class="cpanel-major">
+                                <a href="#" class="cpanel-item cpanel-item-restore" id="aam_roleback" aam-tooltip="<?php echo __('Undo Change', 'aam'); ?>"><?php echo __('Undo Change', 'aam'); ?></a>
+                                <a href="#" class="cpanel-item cpanel-item-save" id="aam_save" ><?php echo __('Save', 'aam'); ?></a>
                             </div>
                             <div class="cpanel-minor">
                                 <a href="https://twitter.com/wpaam" target="_blank" class="cpanel-item cpanel-item-twitter" id="aam_twitter" aam-tooltip="<?php echo __('Follow @wpaam', 'aam'); ?>"><?php echo __('Follow', 'aam'); ?></a>
