--- a/media/css/aam.css
+++ b/media/css/aam.css
@@ -1383,29 +1383,20 @@ a.aam-lock-big{
     display:none;
 }
 
-/** CONFIGPRESS STYLES **/
-.configpress-top-actions{
-    padding: 2px 0;
+.aam-warning{
     width: 100%;
-    margin-bottom: 2px;
-    text-align: right;
-    position: relative;
+    height: 40px;
+    display: table-row;
+    background: transparent url('images/warning.png') no-repeat 2px center;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-top: 1px;
 }
 
-.configpress-top-action-item{
-    width:24px;
-    height: 24px;
-    display: inline-block;
-    background-repeat: no-repeat;
-    background-position: center;
-    text-indent: -9999px;
-    text-decoration: none;
-}
-
-.configpress-top-action-tutorial{
-    background-image: url('images/configpress/pdf.png');
-}
-
-.configpress-top-action-tutorial:hover{
-    background-image: url('images/configpress/pdf-active.png');
+.aam-warning span{
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 30px;
+    font-size: 0.9em;
 }
