--- a/media/css/configpress.css
+++ b/media/css/configpress.css
@@ -94,3 +94,21 @@
     margin-top: 5px;
     border-top: 1px solid #D5D5D5;
 }
+
+.aam-warning{
+    width: 100%;
+    height: 40px;
+    display: table-row;
+    background: transparent url('images/warning.png') no-repeat 2px center;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-top: 1px;
+}
+
+.aam-warning span{
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 30px;
+    font-size: 0.9em;
+}
