--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -36,7 +36,7 @@
                                     <td class="extension-price payed">$30.00</td>
                                     <td>
                                         <div class="extension-actions">
-                                            <a href="http://wpaam.com/support#viewtopic.php?f=7&t=10" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Forum"></a>
+                                            <a href="http://wpaam.com/aam-extensions/aam-plus-package/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->hasExtension('AAM Plus Package')) { ?>
                                                 <a href="#" extension="AAM Plus Package" license="<?php echo $this->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
@@ -52,12 +52,12 @@
                                     <td class="extension-description">
                                         Extend the list of activities that AAM can track. By default AAM logs only user <i>login</i> and <i>logout</i>.
                                         By purchasing this extension you can also track activities like post trash, delete, update etc.
-                                        As well as we can implement any additional activity on demand. Read our <a href="http://wpaam.com/forum/viewtopic.php?f=7&t=91#p243" traget="_blank">Forum</a> for more details.
+                                        As well as we can implement any additional activity on demand. Check <a href="http://wpaam.com/aam-extensions/aam-activities/" traget="_blank">our website</a> for more details.
                                     </td>
                                     <td class="extension-price payed">$20.00</td>
                                     <td>
                                         <div class="extension-actions">
-                                            <a href="http://wpaam.com/forum/viewtopic.php?f=7&t=91#p243" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Forum"></a>
+                                            <a href="http://wpaam.com/aam-extensions/aam-activities/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->hasExtension('AAM Activities')) { ?>
                                                 <a href="#" extension="AAM Activities" license="<?php echo $this->getExtension('AAM Activities')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
