--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -179,6 +179,27 @@
             </div>
         </div>
     </div>
+    
+    <div class="postbox-container" style="width:25%; margin-left: 2%;">
+        <div class="metabox-holder">
+            <div class="meta-box-sortables">
+                <div class="postbox">
+                    <div class="handlediv" title="<?php echo __('Click to toggle', 'aam'); ?>"></div>
+                    <h3 class="hndle">
+                        <span><?php echo __('Development License', 'aam'); ?></span>
+                    </h3>
+                    <div class="inside">
+                        <p>
+                            <?php echo __('Become a member of <b>AAM Community</b>. Obtain <b>Development License</b> today for $119 and get access to all extensions that are available today and will be developed witin a year.', 'aam'); ?>
+                        </p>
+                        <div style="text-align: center;">
+                            <a href="http://wpaam.com/aam-development/aam-development-license/" target="_blank" class="button button-primary button-large"><?php echo __('Read More', 'aam'); ?></a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
